# atlas-reader

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: ai_argv.py  ai_backend.py  ai_local.py  ai_stream.py  arxiv.py  asker.py  claude_subprocess.py  cleanup.py  cli.py  codex_models.py  conversations.py  db.py  digest.py  fs_util.py  glossary.py  health.py  highlights.py  imports.py  launchd.py  main.py  papers.py  pdf_cache.py  pdf_fetch.py  podcast.py  podcast_segments.py  port_config.py  ranker.py  runner_main.py  search.py  secret_store.py  stats.py  subprocess_spawn.py  summarizer.py  tts_client.py
backend/atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/tests/: conftest.py  test_arxiv.py  test_asker.py  test_asker_strip.py  test_claude_subprocess.py  test_cleanup.py  test_cli.py  test_conversations.py  test_db.py  test_digest.py  test_e2e.py  test_e2e_ai.py  test_glossary.py  test_health.py  test_highlights.py  test_highlights_rects.py  test_idle_timeout.py  test_imports.py  test_launchd.py  test_main.py  test_models_endpoint.py  test_papers.py  test_pdf_cache.py  test_podcast_orchestrator.py  test_podcast_routes.py  test_podcast_segments.py  test_port_config.py  test_ranker.py  test_runner_security.py  test_search.py  test_stats.py  test_summarizer.py  test_tts_client.py
frontend/: .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
services/tts/: Dockerfile  requirements-dev.txt  requirements.txt  server.py  (+1 more)
(+93 files in other folders)
