[project]
name = "atlas"
version = "0.1.0"
description = "Local-first paper reviewer with on-demand AI features"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [
    { name = "Amir Mohammad Tavakkoli" },
]
urls = { Homepage = "https://github.com/tavakkoliamirmohammad/atlas-reader", Issues = "https://github.com/tavakkoliamirmohammad/atlas-reader/issues" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
atlas = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
